hello-nodejs/helloworld-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: helloworld
  namespace: argocd
  labels:
    app: helloworld
    app.kubernetes.io/component: helloworld
    app.kubernetes.io/instance: helloworld
    app.kubernetes.io/name: helloworld
    app.kubernetes.io/part-of: sample-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 16-ubi8
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/Juanrigonz/DO101-apps'
    openshift.io/generated-by: OpenShiftWebConsole
spec:
  clusterIP: 172.30.9.44
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.9.44
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: helloworld
    deploymentconfig: helloworld
